--- a/parserScript_proof_of_concept.ipynb
+++ b/parserScript_proof_of_concept.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Because of the limitations of the sec-api, the sec url's are the only imput that can be used to parse for item 1 (not local files downloaded with sec_edgar_downloader). This is why I have created a proof of concept not the full script. In my \"Scrapbook\" notebook, there is the begging of a method to query the htm links (using Lucene query syntax) which could potentially be expanded upon to validate the proof of concept.\n",
     "    \n",
-    "This script utilizes sec-api.io to do the parsing the 10-k for the HTML item 1. I have purchased a 1 - month startup license for the purpose of this project. "
+    "This script utilizes sec-api.io to do the parsing the 10-k for the HTML item 1. "
    ]
   },
   {
